--- a/main.html
+++ b/main.html
@@ -3,11 +3,14 @@
 <html>
 
 <head>
+				<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div id="text"> welcome to the word of web development</div>
+	
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+	<script type="text/javascript" src="./script.js">
 </body>
 
 </html>
