--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<div id="text">welcome to the word of web development</div>
 	
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<script type="text/javascript" src="./script.js">
+	<script type="text/javascript" src="./script.js"> </script>
 </body>
 
 </html>
