--- a/main.html
+++ b/main.html
@@ -3,14 +3,11 @@
 <html>
 
 <head>
-				<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div id="text">welcome to the word of web development</div>
-	
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<script type="text/javascript" src="./script.js"> </script>
+	<h1>Hello world </h1>
 </body>
 
 </html>
